# phaelus-jam

./: .pre-commit-config.yaml  Agents.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
agents/: agent_cli.py  config.yaml
agents/prompts/: system.md  task_bugfix.md  task_new_feature.md
docs/: prospective_visuals.md
phaelusjam/: __init__.py  composer.py  engine.py  events.py  metrics.py  player.py
phaelusjam/adapters/: openai_adapter.py
scripts/: cli.py
server/: main.py
server/presets/: defaults.json
server/static/: app.js  style.css
server/static/css/: mockups.css
server/templates/: index.html
tests/: test_import_and_fallback.py
