
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phaelusjam"
version = "0.1.0"
description = "PhaelusJam: an AI-powered composer/accompanist for MIDI instruments"
authors = [{ name = "LogicMUSE", email = "dev@example.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mido",
  "python-rtmidi",
  "openai>=1.0.0",
  "pydantic>=2.0",
  "fastapi",
  "uvicorn"
]

[project.scripts]
phaelusjam = "scripts.cli:main"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E","F","B","I"]
ignore = ["E501"]
